config/liveness.yaml
apiVersion: v1
kind: Pod
metadata:
  name: liveness-exec-pod
  namespace: default
spec:
  containers:
  - name: liveness-exec-container
    image: yifangzhuhou/get-started:part2
    imagePullPolicy: IfNotPresent
    command: ["/bin/bash","-c","touch /tmp/live; sleep 60; rm -rf /tmp/live; sleep 180"]
    livenessProbe:
      exec: 
        command: ["test","-e","/tmp/live"]
      initialDelaySeconds: 1
      periodSeconds: 3
