config/readiness.yaml
apiVersion: v1
kind: Pod
metadata:
  name: readiness-httpget-pod
  namespace: default
spec:
  containers:
  - name: readiness-httpget-container
    image: yifangzhuhou/get-started:part2
    imagePullPolicy: IfNotPresent
    readinessProbe:
      httpGet:
        port: 8080
        path: /index.html
      initialDelaySeconds: 1
      periodSeconds: 3
