config/nodeport-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-nodeport-svc
  namespace: default
spec:
  type: NodePort
  selector:
    app: myapp
  ports:
  - name: http
    port: 80
    targetPort: 80
