config/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx-prometheus
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: prometheus.zhangli07.com
    http:
      paths:
      - path: /(.*)
        backend:
          serviceName: prometheus-k8s
          servicePort: 9090
  - host: grafana.zhangli07.com
    http:
      paths:   
      - path: /(.*)
        backend:
          serviceName: grafana
          servicePort: 3000
